@@ -72,7 +72,7 @@ def parse_args():
     parser = argparse.ArgumentParser(usage=GIT2EFFORT_USAGE_MSG,
                                      description=GIT2EFFORT_DESC_MSG,
                                      epilog=GIT2EFFORT_EPILOG_MSG,
-                                     formatter_class=argparse.RawDescriptionHelpFormatter,
+                                      formatter_class=argparse.RawDescriptionHelpFormatter,
                                      add_help=False)
 
     parser.add_argument('-h', '--help', action='help',
