@@ -4,4 +4,5 @@ beautifulsoup4>=4.3.2
 feedparser>=5.1.3
 dulwich>=0.18.5, <0.19
 urllib3>=1.22
+tabulate>=0.8.7
 -e git+https://github.com/chaoss/grimoirelab-toolkit/#egg=grimoirelab-toolkit
